--- a/views/add_employee.hbs
+++ b/views/add_employee.hbs
@@ -40,6 +40,8 @@
                     <div class="modal_body_content" id="body_step1">
                             <h5 for="" style="font-weight: bold; padding-bottom: 20px; padding-top: 10px">Employee Information</h5>
 
+                            {{> messages}}
+
                             <div class="form-group" style="margin-left: 5px;">
                               <div class="row">
 
