Added more data validation on update employee (existing farm assignment and mobile number)+ Minor UI changes on somes pages

--- a/public/assets/css/test.css
+++ b/public/assets/css/test.css
@@ -465,3 +465,7 @@ input, select, textarea{
 textarea:focus, input:focus {
     color: #332C1F;
 }
+
+select.form-select.form-select-sm {
+    cursor: pointer;
+}
