--- a/views/summary_farm_monitoring.hbs
+++ b/views/summary_farm_monitoring.hbs
@@ -1,4 +1,9 @@
 <div class="container-fluid">
+
+	<div class="d-sm-flex justify-content-between align-items-center mb-4">
+    	<h3 class="text-dark mb-0">Farms &gt; Farm Monitoring</h3><a class="btn btn-primary disabled btn-sm d-none d-sm-inline-block" role="button" style="background: rgba(78,115,223,0);color: #332c1f;border-color: rgba(51,44,31,0);">&nbsp;<br>&nbsp;<i class="far fa-clock" style="margin-right: 5px;"></i>{{cur_date}}<br><br></a>
+	</div>
+
 	<div class="card shadow mb-5" style="max-width: 1150px; margin: 0px auto">
 	    <div class="card-header d-flex py-3" style="background: #939C1F;padding: 16px 20px;height: auto;">
 	        <p class="m-0 font-weight-bold" style="color: rgb(255,255,255);">Summarized Farm Monitoring</p>
