--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -104,6 +104,11 @@
                 </a>
 
                 <div class="dropdown-divider"></div>
+                <a class="dropdown-item notSidebar" href="#" data-toggle="modal" data-target="#wo_shortcut_modal" data-whatever="@mdo">
+                 <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-white-400"></i>&nbsp;Finish WO Shortcut</a>
+                </a>
+
+                <div class="dropdown-divider"></div>
                 <a class="dropdown-item notSidebar" href="/logout">
                      <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-white-400"></i>&nbsp;Logout</a>
                     </a>
